# HttpChatServer1.0

./: CMakeLists.txt  README.md  test.cpp
include/chatserver/domain/message/: message.h  message_id.h
src/: main.cpp
src/chatserver/application/handlers/: send_message_handler.cpp
src/chatserver/domain/message/: message.cpp  message_id.cpp
src/chatserver/infrastructure/http/resources/: message_resource.cpp  user_resource.cpp
tools/: migrate_db.sh
